2008-03-25  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/async-getprop.c:
    * src/async-getprop.h: Don't free task on get reply.
    
    * src/ccm-display.c:
    * src/ccm-display.h: Use signal instead callback on ag_task reply.
    
    * src/ccm-window.c:
    * src/ccm-window.h:
    * src/ccm.h: Add get transient for, get group leader and keep_above/below
                 interface.
    
    * src/ccm-screen.c: Restack rework to be more conformant to EWMH.

    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/shadow/ccm-shadow.c: Change policy to filter window with new 
                                   property check.    

2008-03-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c: Fix crash on async get_property handler destruction.
    
2008-03-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/async-getprop.c: Return silently instead an assert if node not found
                           on remove.

2008-03-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.h:
    * src/ccm-display.c: Fix async get_property handler destruction
    
    * src/ccm-window.c: Check hint_type and mwm property on map

2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c: Fix a crash on remove get_property handler.
    * src/ccm-display.c: 
    * src/ccm-screen.c:
    * src/ccm-screen.h: Create one window selection owner for each screen.

2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c: Cache use_xshm option.

2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Use async get property for hint type and is_decorated.
    
    * plugins/opacity/ccm-opacity.c
    * plugins/shadow/ccm-shadow.c: Fix get property handling.
    
    * src/async-getprop.c:
    * src/async-getprop.h: Add ag_task_destroy method.
    